--- a/templates/web/base/menu.html
+++ b/templates/web/base/menu.html
@@ -1,61 +1,64 @@
 {% load static solo_tags %}
 {% get_solo 'web_configurations.GeneralConfiguration' as general_configuracion %}
+{#<nav class="navbar fixed-top navbar-expand-lg bg-odecopack scrolling-navbar">#}
+<div {% if es_menu_index == True %}class="index"{% endif %}>
+    <nav class="navbar fixed-top navbar-expand-lg scrolling-navbar {% if es_menu_index == True %}navbar-toggleable-md{% endif %}">
+        <a class="navbar-brand" href="{% url 'index' %}">
+            <img width="210px" src="{% static 'web/img/logo-odecopack2.png' %}" alt="">
+        </a>
 
-<nav class="navbar fixed-top navbar-expand-lg bg-odecopack scrolling-navbar">
-    <a class="navbar-brand" href="{% url 'index' %}">
-        <img width="210px" src="{% static 'web/img/logo-odecopack2.png' %}" alt="">
-    </a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon right">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </span>
-    </button>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav {% if es_menu_index == True %} smooth-scroll {% endif %}">
-            <li class="nav-item right-border active">
-                <a class="nav-link" href="{% if es_menu_index == False %}{% url 'index' %}{% endif %}#empresa"
-                   data-offset="70">EMPRESA <span class="sr-only">(current)</span></a>
-            </li>
-        </ul>
-        <ul class="navbar-nav smooth-scroll">
-            <li class="nav-item right-border">
-                <a class="nav-link" href="#soluciones" data-offset="100">SOLUCIONES</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav {% if es_menu_index == True %} smooth-scroll {% endif %}">
-            <li class="nav-item right-border">
-                <a class="nav-link" href="{% if es_menu_index == False %}{% url 'index' %}{% endif %}#clientes"
-                   data-offset="70">CLIENTES</a>
-            </li>
-            <li class="nav-item">
-                <a data-toggle="modal" data-target="#contactenos_form" class="nav-link" href="#">CONTÁCTENOS</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav nav-flex-icons">
-            {% if general_configuracion.facebook %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ general_configuracion.facebook }}"><i class="fa fa-facebook"></i></a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav {% if es_menu_index == True %} smooth-scroll {% endif %}">
+                <li class="nav-item right-border">
+                    <a class="nav-link" href="{% if es_menu_index == False %}{% url 'index' %}{% endif %}#empresa"
+                       data-offset="70">EMPRESA <span class="sr-only">(current)</span></a>
                 </li>
-            {% endif %}
-            {% if general_configuracion.twitter %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ general_configuracion.twitter }}"><i class="fa fa-twitter"></i></a>
+            </ul>
+            <ul class="navbar-nav smooth-scroll">
+                <li class="nav-item right-border">
+                    <a class="nav-link" href="#soluciones" data-offset="100">SOLUCIONES</a>
                 </li>
-            {% endif %}
-            {% if general_configuracion.youtube %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ general_configuracion.youtube }}"><i
-                            class="fa fa-youtube-play"></i></a>
+            </ul>
+            <ul class="navbar-nav {% if es_menu_index == True %} smooth-scroll {% endif %}">
+                <li class="nav-item right-border">
+                    <a class="nav-link" href="{% if es_menu_index == False %}{% url 'index' %}{% endif %}#clientes"
+                       data-offset="70">CLIENTES</a>
                 </li>
-            {% endif %}
-            {% if general_configuracion.instagram %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ general_configuracion.instagram }}"><i class="fa fa-instagram"></i></a>
+                    <a data-toggle="modal" data-target="#contactenos_form" class="nav-link" href="#">CONTÁCTENOS</a>
                 </li>
-            {% endif %}
-        </ul>
-    </div>
-</nav>
+            </ul>
+            <ul class="navbar-nav nav-flex-icons">
+                {% if general_configuracion.facebook %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ general_configuracion.facebook }}"><i
+                                class="fa fa-facebook"></i></a>
+                    </li>
+                {% endif %}
+                {% if general_configuracion.twitter %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ general_configuracion.twitter }}"><i class="fa fa-twitter"></i></a>
+                    </li>
+                {% endif %}
+                {% if general_configuracion.youtube %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ general_configuracion.youtube }}"><i
+                                class="fa fa-youtube-play"></i></a>
+                    </li>
+                {% endif %}
+                {% if general_configuracion.instagram %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ general_configuracion.instagram }}"><i class="fa fa-instagram"></i></a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+</div>
