--- a/templates/web/base/cabezote.html
+++ b/templates/web/base/cabezote.html
@@ -16,6 +16,6 @@
         </div>
     </div>
 </div>
-<div class="pl-3 pr-3 pl-sm-0 pr-sm-0">
+<div class="pl-3 pr-3 pl-sm-0 pr-sm-0 cabezote">
     {% botones_soluciones %}
 </div>
