Django solo sin cache

--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -28,9 +28,7 @@
                             <div class="d-none d-sm-block">
                                 {#                                <h1 class="white-text brand-name font-up font-bold">{{ index_configuracion.header_titulo }}</h1>#}
                                 {#                            <h5 class="white-text">Our 24 Hour's Services</h5>#}
-                                <h3 class="white-text font-bold odeco-font mb-2">{{ index_configuracion.header_text }}
-                                    {{ index_configuracion.header_imagen.url }}
-                                </h3>
+                                <h3 class="white-text font-bold odeco-font mb-2">{{ index_configuracion.header_text }}</h3>
                             </div>
                         </div>
                         <div class="col-12">
