--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -23,7 +23,7 @@
                         <div class="row justify-content-center">
                             <div class="col-8 col-sm-6">
                                 <figure>
-                                    <img class="img-fluid" src="{% static 'web/img/marca_agua_orange.png' %}" alt="">
+                                    <img class="img-fluid" src="{% static 'web/img/marca_agua.png' %}" alt="">
                                 </figure>
                             </div>
                             <div class="col-md-12 text-center wow fadeIn" data-wow-delay="0.2s">
